# ferroviz

./: .gitignore  Cargo.toml  ISSUE.md  README.md
examples/: vision_attention.rs
examples/output/: vision_attention_graph.html  vision_attention_graph.json  vision_attention_training.html
src/: backward.rs  capture.rs  cuda_trace.rs  fusion_analysis.rs  html.rs  instrument.rs  json.rs  lib.rs  model.rs
src/assets/: viewer.css  viewer.js
tests/: test_basic.rs
