[package]
name = "ferroviz"
version = "0.1.0"
edition = "2021"
description = "Compute graph visualizer for ferrotorch"
license = "CC0-1.0"

[dependencies]
ferrotorch-jit = "0.1.9"
ferrotorch-core = "0.1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]
optional = true

[dev-dependencies]
ferrotorch-nn = "0.1.9"
ferrotorch-optim = "0.1.9"

[features]
default = []
cuda-trace = ["rusqlite"]
